--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,3 +11,115 @@
   width: 100vw;
   height: 100vh;
 }
+
+
+
+.App{
+  padding: 20px;
+}
+
+.list-things{
+  width:initial;
+  margin: 30px;
+  padding: 20px;
+  display: flex;
+  border: 1px solid gray;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  
+}
+.list-things-cont{
+  display: flex;  
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.thing, .thing-add{
+  width: 280px;
+  height: 320px;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  box-shadow: 0 0 10px lightgray;
+  position: relative;
+  transition: 0.3s;
+}
+
+.thing:hover, .thing-add:hover{
+  box-shadow: 0 0 20px gray;
+}
+
+.thing-add{
+  background: lightgray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+
+.add-thing-img{
+  width: 40%;
+  height: 40%;
+}
+
+.close{
+  width: 23px;
+  height: 23px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border: 1px solid darkgray;
+  display: flex;
+  justify-content: center;
+  border-radius: 3px;
+  align-items: center;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.6s;
+  color: gray;
+}
+
+.thing:hover .close{
+  visibility: visible;
+  opacity: 1;
+}
+
+.thing-body{
+  height: 100%;
+  white-space: pre-wrap;
+  line-height: 1.3rem;
+  
+}
+
+.delete__form{
+  display: grid;
+  /* background: salmon; */
+  gap: 20px;
+}
+
+.delete__form__options{
+  display: flex;
+  justify-content: space-between;
+}
+
+.delete__form__options__btn{
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+
+.delete__form__options__btn:nth-child(1){
+  background:rgb(255 188 179)
+}
+
+.delete__form__options__btn:nth-child(2){
+  background:rgb(165 255 174)
+}
